samples/_failures_safe/1761285433_31c96b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_adbe5fea.c: In function ‘main’:
./samples/SAFE/__tmp_adbe5fea.c:165:12: error: missing terminating " character
  165 |     printf("
      |            ^
./samples/SAFE/__tmp_adbe5fea.c:165:5: error: expected expression at end of input
  165 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_adbe5fea.c:165:5: error: expected declaration or statement at end of input
